--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ html, body {margin:0;padding:0;height:100%;}
   text-align: center;
   background-color: #474B4F;
   height: 100%;
+  min-width: 1440px;
 }
 
 .route-components{
@@ -22,6 +23,7 @@ html, body {margin:0;padding:0;height:100%;}
   padding-right: 10vh;
   height: 3vh;
   min-height: 30px;
+  min-width: 1400;
   padding: 3px;
   padding-right: 40px;
 }
