--- a/src/TripShow.css
+++ b/src/TripShow.css
@@ -10,7 +10,7 @@
     justify-content: center;
     height: 100%;
     min-height: 890px;
-    min-width: 500px;
+    min-width: 1440px;
 }
 .pe-form-and-trip-rates{
     display: flex;
@@ -18,6 +18,9 @@
     justify-content: flex-start;
     margin: 10px;
     width: 40%;
+    height: 95%;
+    min-height: 845px;
+    min-width: 545px;
 }
 
 .trip-show{
@@ -26,11 +29,11 @@
     min-height: 845px;
     width: 55%;
     min-width: 750px;
-    border-style: solid;
-    border-color: #86c232;
+    /* border-style: solid;
+    border-color: #86c232; */
     border-radius: 2%;
     color: white;
-    background-color: #222629;
+    background-color: rgba(34, 38, 41, .7);
     box-shadow: 5px 5px;
     line-height: 0.9;
     text-indent: 20px;
@@ -40,8 +43,7 @@
 #pe-list-container{
     height: 20%;
     overflow: auto;
-    /* display: inline; */
-    background-color: gray; /*will update this once decided upon other coloring */
+    background-color: gray; /*may update this once decided upon other coloring */
 }
 
 .unauthorized{
@@ -64,49 +66,49 @@
 .planned-expense-div{
     color: white;
     width: 100%;
-    border-style: solid;
     border-radius: 2%;
-    background-color: #222629;
-    box-shadow: 5px 5px;
-    border-color: #86c232;
-    margin-bottom: 2%;
+    background-color: rgba(34, 38, 41, .7);
+    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
     text-align: center;
     height: 20%;
+    min-height: 185px;
+    overflow: auto;
 }
+
+
 
 .planned-expense-form{
     text-align: center;
+    line-height: 1.5;
 }
 
 .pe-h2{
+    font-family: 'Racing Sans One';
     margin: 1%;
 }
 
 .display-buttons-container{
-    /* border-color: #86c232; */
-    /* border-style: solid; */
-    /* border-radius: 2%; */
     margin-top: 2%;
     margin-bottom: 2%;
-    /* color: white; */
-    /* background-color: #222629; */
     display: flex;
     justify-content: space-evenly;
 }
 
 .display-buttons{
-    background-color: #222629;
     border-style: solid;
     border-radius: 2%;
-    color: white;
-    border-color: white;
+    color: black;
+    border-color: black;
+    font-family: 'Racing Sans One';
+    padding: 5px;
 }
   
 .display-buttons:hover{
     cursor: pointer;
-    border-color: #86c232;
+    color: #cc3a00;
+    border-color: #cc3a00;
 }
   
 .chart{
@@ -135,14 +137,12 @@
 }
 
 .historical-rates{
-    border-style: solid;
-    border-color: #86c232;
     color: white;
     border-radius: 2%;
     width: 100%;
-    background-color: #222629;
+    background-color: rgba(34, 38, 41, .7);
     box-shadow: 5px 5px;
-    flex-grow: 1;
+    overflow: auto;
 }
 
 .pie-chart{
