--- a/src/TripShow.css
+++ b/src/TripShow.css
@@ -77,7 +77,13 @@
     overflow: auto;
 }
 
+.delete-button{
+    color: #cc3a00;
+}
 
+.delete-button:hover{
+    cursor: pointer;
+}
 
 .planned-expense-form{
     text-align: center;
