--- a/src/TripShow.css
+++ b/src/TripShow.css
@@ -29,8 +29,6 @@
     min-height: 845px;
     width: 55%;
     min-width: 750px;
-    /* border-style: solid;
-    border-color: #86c232; */
     border-radius: 2%;
     color: white;
     background-color: rgba(34, 38, 41, .7);
@@ -43,7 +41,7 @@
 #pe-list-container{
     height: 20%;
     overflow: auto;
-    background-color: gray; /*may update this once decided upon other coloring */
+    background-color: rgba(0, 0, 0, .6); /*may update this once decided upon other coloring */
 }
 
 .unauthorized{
@@ -68,7 +66,6 @@
     width: 100%;
     border-radius: 2%;
     background-color: rgba(34, 38, 41, .7);
-    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -163,10 +160,7 @@
 }
 
 .canvas-chart-container{
-    /* border-style: solid; */
     border-radius: 2%;
-    /* border-color: #86c232; */
-    /* box-shadow: 5px 5px; */
     color: white;
 }
 
