update edit profile form structure

--- a/src/App.css
+++ b/src/App.css
@@ -153,5 +153,6 @@ End title/credential page elements
   background: #cc3a00;
   width: 100%;
   margin: 20px;
+  padding: 20px;
   box-shadow: 2px 2px 5px;
 }
